Manifests and main's Activities opening

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -15,12 +15,10 @@
         android:fontFamily="sans-serif-condensed"
         android:padding="25dp"
         android:text="Santo Domingo"
-        android:onClick="openSantoDomingoList"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvCibao"
@@ -31,7 +29,6 @@
         android:orientation="vertical"
         android:padding="25dp"
         android:text="Cibao"
-        android:onClick="openCibaoList"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -45,7 +42,6 @@
         android:padding="25dp"
         android:text="Este"
         android:textAlignment="center"
-        android:onClick="openEsteList"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"/>
@@ -59,7 +55,6 @@
         android:text="Sur"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:onClick="openSurList"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -68,9 +63,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_red_light"
-        android:onClick="openMapaList"
         android:padding="25dp"
-        android:text="@string/mapa"
+        android:text="Mapa"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
