--- a/app/src/main/res/layout/activity_santo_domingo.xml
+++ b/app/src/main/res/layout/activity_santo_domingo.xml
@@ -1,9 +1,14 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/listview_santoDomingo"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/listview_santoDomingo"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:paddingBottom="@dimen/activity_vertical_margin"
 android:paddingLeft="@dimen/activity_horizontal_margin"
 android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin" />
+android:paddingTop="@dimen/activity_vertical_margin"
+    android:textSize="14sp" >
+
+</ListView>
+
 
