--- a/app/src/main/res/layout/list_item_este.xml
+++ b/app/src/main/res/layout/list_item_este.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:padding="16dp">
 
     <ImageView
         android:id="@+id/list_item_image"
         android:layout_width="50dp"
         android:layout_height="50dp" />
+
 
     <LinearLayout
         android:layout_width="0dp"
